--- a/plugin.xml
+++ b/plugin.xml
@@ -67,6 +67,7 @@
         <source-file src="src/android/CameraLauncher.java" target-dir="src/org/apache/cordova/camera" />
         <source-file src="src/android/FileHelper.java" target-dir="src/org/apache/cordova/camera" />
         <source-file src="src/android/ExifHelper.java" target-dir="src/org/apache/cordova/camera" />
+		<source-file src="src/android/SquareLinearLayout.java" target-dir="src/org/apache/cordova/camera" />
 		<source-file src="src/android/cameraplugin.xml" target-dir="res/layout" />
 		<source-file src="src/android/cross.png" target-dir="res/drawable" />
 		<source-file src="src/android/shutter.png" target-dir="res/drawable" />
